--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_switch: ^0.3.2
   change_app_package_name: ^1.1.0
   file: ^6.1.4
+  smooth_page_indicator: ^1.1.0
   # google_mobile_ads: ^2.3.0
   # image_picker: ^0.8.5+3
 
