--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   change_app_package_name: ^1.1.0
   file: ^6.1.4
   smooth_page_indicator: ^1.1.0
+  custom_pin_screen: ^0.5.0
   # google_mobile_ads: ^2.3.0
   # image_picker: ^0.8.5+3
 
