--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   custom_pin_screen: ^0.5.0
   app_usage: ^3.0.1
+  cloud_firestore: ^4.15.9
   # google_mobile_ads: ^2.3.0
   # image_picker: ^0.8.5+3
 
