--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
- xmlns:tools="http://schemas.android.com/tools"
-    package="com.applockFlutter">
+ xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <uses-permission android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -50,23 +49,6 @@
         </receiver>
 
        <service android:name=".ForegroundService"/>
-
-       
-        <!-- <service android:name=".CustomNotificationListenerService"
-            android:label="@string/app_name"
-            android:exported="false"
-            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
-            <intent-filter>
-                <action android:name="android.service.notification.NotificationListenerService" />
-            </intent-filter>
-        </service> -->
-
-        <!-- <manifest>
-            <application> -->
-                <!-- Sample app ID: ca-app-pub-3940256099942544~3347511713 -->
-                <!--ca-app-pub-5792296207093661~5931443090-->
-            <!-- <application>
-        <manifest> -->
 
 
         <activity android:name=".NativeActivity"/>
