--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.0.0
   flutter_svg: ^2.0.6
-  fluttertoast: ^8.0.9
+  # fluttertoast: ^8.0.9
   shared_preferences: ^2.0.15
   get: ^4.6.5
   url_launcher: ^6.1.5
