--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,32 +33,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^5.0.0
+  google_fonts: ^6.2.1
   flutter_svg: ^2.0.6
   fluttertoast: ^8.2.4
   shared_preferences: ^2.0.15
   get: ^4.6.5
   url_launcher: ^6.1.5
   installed_apps: ^1.3.1
-  flutter_inappwebview: ^5.4.3+7
-  app_settings: ^4.1.6
-  # share_plus: ^7.0.2
+  flutter_inappwebview: ^6.0.0
+  app_settings: ^5.1.1
   device_apps: ^2.2.0
-  lottie: ^2.4.0
-  #ninad
-  intl: ^0.18.1
+  lottie: ^3.1.0
+  intl: ^0.19.0
   html: ^0.15.0
-  permission_handler: ^10.2.0
+  permission_handler: ^11.3.0
   usage_stats: ^1.2.0
   flutter_switch: ^0.3.2
   change_app_package_name: ^1.1.0
-  file: ^6.1.4
+  file: ^7.0.0
   smooth_page_indicator: ^1.1.0
   custom_pin_screen: ^0.5.0
   app_usage: ^3.0.1
   cloud_firestore: ^4.15.9
-  # google_mobile_ads: ^2.3.0
-  # image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +65,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
-  flutter_launcher_icons: "^0.9.0"
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   image_path: "assets/images/appLogo.png" 
