--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,11 @@ buildscript {
 }
 
 allprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
     repositories {
         google()
         mavenCentral()
